Adicionando CMake para o diretorio de OpenMP e organizando o repo

--- a/CPP_OpenMP/Loops/CMakeLists.txt
+++ b/CPP_OpenMP/Loops/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.31)
-project(Loops)
 
 set(CMAKE_CXX_STANDARD 26)
 
@@ -9,3 +8,5 @@ find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(Loops PUBLIC OpenMP::OpenMP_CXX)
 endif()
+
+target_link_libraries(Loops PUBLIC fmt::fmt)
