--- a/CPP_OpenMP/Soma_Vector/CMakeLists.txt
+++ b/CPP_OpenMP/Soma_Vector/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.31)
-project(Soma_Vector)
 
 set(CMAKE_CXX_STANDARD 26)
 
@@ -9,3 +8,5 @@ find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(Soma_Vector PUBLIC OpenMP::OpenMP_CXX)
 endif()
+
+target_link_libraries(Soma_Vector PUBLIC fmt::fmt)
