--- a/CPP_OpenMP/CMakeLists.txt
+++ b/CPP_OpenMP/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(Count_Primos)
 add_subdirectory(Data_Problems)
 add_subdirectory(Hello_World)
 add_subdirectory(Loops)
+add_subdirectory(Multiplica_Matriz)
 add_subdirectory(Soma_Vector)
