--- a/CPP_CUDA/SumTwoBigArrays/CMakeLists.txt
+++ b/CPP_CUDA/SumTwoBigArrays/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required(VERSION 3.31)
+cmake_minimum_required(VERSION 3.10)
 
-add_executable(SumTwoArrays main.cpp)
+add_executable(SumTwoArrays main.cu)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CUDA_STANDARD 17)
 
 target_link_libraries(SumTwoArrays PUBLIC fmt::fmt)
 
